--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
   
   <!-- Call-to-Action-секция -->
   <section class="cta" id="cta">
-    <a href="https://your-game-link-here.com" target="_blank">Spela Flame Clicker</a>
+    <a href="https://n0n4nd00m.github.io/FlameClicker/" target="_blank">Spela Flame Clicker</a>
   </section>
   
   <!-- Testimonials-секция -->
